fix: wrapped link inside list
(cherry picked from commit 3ff962c264bfc881a0121edc92f5e746173c0849)

--- a/app/components/employeeCard.module.scss
+++ b/app/components/employeeCard.module.scss
@@ -2,8 +2,8 @@ $defaultWhite: #fff;
 $defaultBlack: #000;
 $secondary-4-default: #ede8d7;
 
-.link {
-  text-decoration: none;
+.list {
+  list-style-type: none;
 }
 
 .employeeCard {
@@ -12,6 +12,8 @@ $secondary-4-default: #ede8d7;
   padding-inline: 2rem;
   width: 20rem;
   height: 13.625rem;
+
+  text-decoration: none;
 
   border-radius: 1.1875rem;
   border: 1px solid $secondary-4-default;
